--- a/i3/config
+++ b/i3/config
@@ -27,7 +27,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use PrintSc button to take screenshot with scrot
-bindsym Print exec --no-startup-id ~/bin/printscreen.sh
+bindsym Print exec --no-startup-id ~/bin/printScreen.sh
 
 # Use xbacklight to change brightness
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
@@ -194,8 +194,12 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-client.focused          #665c54 #665c54 #eddbb2 #2e9ef4   #665c54
-client.focused_inactive #282828 #5f676a #ffffff #484e50   #5f676a
+# https://i3wm.org/docs/userguide.html#client_colors
+# <colorclass>     <border> <background> <text> <indicator> <child_border>
+# client.focused          #665c54 #665c54 #eddbb2 #2e9ef4   #665c54
+# client.focused_inactive #282828 #5f676a #ffffff #484e50   #5f676a
+client.focused          #5f676a #5f676a #ffffff #d79921   #5f676a
+client.focused_inactive #282828 #665c54 #eddbb2 #83a598   #665c54
 client.unfocused        #3c3836 #3c3836 #a89984 #292d2e   #222222
 client.urgent           #cc241d #cc241d #ebdbb2 #cc241d   #cc241d
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
