changed to 12 hour time

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -54,5 +54,7 @@ memory {
 }
 
 tztime local {
-        format = "%m-%d-%y %H:%M:%S"
+        # https://old.reddit.com/r/i3wm/comments/9kgdp3/how_to_show_12_hour_time_in_i3status/
+        format = "%m-%d-%y %H:%M:%S" # 24 hour time
+        format = "%m-%d-%y %I:%M:%S" # 12 hour time
 }
