--- a/i3/config
+++ b/i3/config
@@ -18,7 +18,7 @@ floating_modifier $mod
 # is used in the bar {} block below.
 font pango:FiraCode-Monospace 8
 # Starts feh with background image 
-exec --no-startup-id feh --bg-fill /usr/share/backgrounds/templeos.png
+exec --no-startup-id feh --bg-fill /usr/share/backgrounds/minecraftDeveloper.jpg
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
