--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -58,3 +58,12 @@ tztime local {
         format = "%m-%d-%y %H:%M:%S" # 24 hour time
         format = "%m-%d-%y %I:%M:%S" # 12 hour time
 }
+
+volume master {
+        format = "%volume"
+        format_muted = "muted (%volume)"
+        device = "default"
+        mixer = "Master"
+        mixer_idx = 0
+}
+
