--- a/i3/config
+++ b/i3/config
@@ -17,8 +17,11 @@ floating_modifier $mod
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:FiraCode-Monospace 8
+
+# Exec xrandr to output also to external monitor
+exec xrandr --output HDMI-1 --mode 1920x1080 --rate 60.00
 # Starts feh with background image 
-exec --no-startup-id feh --bg-fill /usr/share/backgrounds/minecraftDeveloper.jpg
+exec --no-startup-id feh --bg-fill ~/img/kissingRolls.png
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
